// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PromsMainPanel /> should renders with all props correctly 1`] = `
<div
  className="panel-body"
>
  <SortableTable
    columnNameSortBy="id"
    data={
      Array [
        Object {
          "dateCreated": 1482170593395,
          "dateCreatedConvert": "19-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "danger",
            },
          ],
          "name": "test Proms 1",
          "score": 9,
          "source": "openehr",
          "sourceId": "testSourceID1",
        },
        Object {
          "dateCreated": 1482190593395,
          "dateCreatedConvert": "20-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "success",
            },
          ],
          "name": "test Proms 2",
          "score": 3,
          "source": "openehr",
          "sourceId": "testSourceID2",
        },
      ]
    }
    emptyDataMessage="No proms"
    headers={
      Array [
        Object {
          "key": "name",
          "title": "Name of PROM",
          "width": "25%",
        },
        Object {
          "key": "score",
          "title": "Score",
          "width": "25%",
        },
      ]
    }
    id="testSourceID1"
    onCellClick={[Function]}
    onHeaderCellClick={[Function]}
    resourceData={
      Array [
        Object {
          "dateCreated": 1482170593395,
          "dateCreatedConvert": "19-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "danger",
            },
          ],
          "name": "test Proms 1",
          "score": 9,
          "source": "openehr",
          "sourceId": "testSourceID1",
        },
        Object {
          "dateCreated": 1482190593395,
          "dateCreatedConvert": "20-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "success",
            },
          ],
          "name": "test Proms 2",
          "score": 3,
          "source": "openehr",
          "sourceId": "testSourceID2",
        },
      ]
    }
    sortingOrder="asc"
    table=""
  />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent right"
      >
        <PTButton
          className="btn btn-success btn-inverse btn-create"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-plus"
          />
          <span
            className="btn-text"
          >
             Create
          </span>
        </PTButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PromsMainPanel /> should renders with all props correctly 2`] = `
<div
  className="panel-body"
>
  <SortableTable
    columnNameSortBy="id"
    data={
      Array [
        Object {
          "dateCreated": 1482170593395,
          "dateCreatedConvert": "19-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "danger",
            },
          ],
          "name": "test Proms 1",
          "score": 9,
          "source": "openehr",
          "sourceId": "testSourceID1",
        },
        Object {
          "dateCreated": 1482190593395,
          "dateCreatedConvert": "20-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "success",
            },
          ],
          "name": "test Proms 2",
          "score": 3,
          "source": "openehr",
          "sourceId": "testSourceID2",
        },
      ]
    }
    emptyDataMessage="No proms"
    headers={
      Array [
        Object {
          "key": "name",
          "title": "Name of PROM",
          "width": "25%",
        },
        Object {
          "key": "score",
          "title": "Score",
          "width": "25%",
        },
      ]
    }
    id="testSourceID1"
    onCellClick={[Function]}
    onHeaderCellClick={[Function]}
    resourceData={
      Array [
        Object {
          "dateCreated": 1482170593395,
          "dateCreatedConvert": "19-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "danger",
            },
          ],
          "name": "test Proms 1",
          "score": 9,
          "source": "openehr",
          "sourceId": "testSourceID1",
        },
        Object {
          "dateCreated": 1482190593395,
          "dateCreatedConvert": "20-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "success",
            },
          ],
          "name": "test Proms 2",
          "score": 3,
          "source": "openehr",
          "sourceId": "testSourceID2",
        },
      ]
    }
    sortingOrder="asc"
    table=""
  />
  <Spinner />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent right"
      >
        <PTButton
          className="btn btn-success btn-inverse btn-create"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-plus"
          />
          <span
            className="btn-text"
          >
             Create
          </span>
        </PTButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PromsMainPanel /> should renders with all props correctly 3`] = `
<div
  className="panel-body"
>
  <SortableTable
    columnNameSortBy="id"
    data={
      Array [
        Object {
          "dateCreated": 1482170593395,
          "dateCreatedConvert": "19-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "danger",
            },
          ],
          "name": "test Proms 1",
          "score": 9,
          "source": "openehr",
          "sourceId": "testSourceID1",
        },
      ]
    }
    emptyDataMessage="No proms"
    headers={
      Array [
        Object {
          "key": "name",
          "title": "Name of PROM",
          "width": "25%",
        },
        Object {
          "key": "score",
          "title": "Score",
          "width": "25%",
        },
      ]
    }
    id="testSourceID1"
    onCellClick={[Function]}
    onHeaderCellClick={[Function]}
    resourceData={
      Array [
        Object {
          "dateCreated": 1482170593395,
          "dateCreatedConvert": "19-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "danger",
            },
          ],
          "name": "test Proms 1",
          "score": 9,
          "source": "openehr",
          "sourceId": "testSourceID1",
        },
        Object {
          "dateCreated": 1482190593395,
          "dateCreatedConvert": "20-Dec-2016",
          "highlighters": Array [
            Object {
              "name": "score",
              "status": "success",
            },
          ],
          "name": "test Proms 2",
          "score": 3,
          "source": "openehr",
          "sourceId": "testSourceID2",
        },
      ]
    }
    sortingOrder="asc"
    table=""
  />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent left"
      >
        <PaginationBlock
          entriesPerPage={1}
          offset={0}
          setOffset={[Function]}
          totalEntriesAmount={116}
        />
      </div>
      <div
        className="control-group with-indent right"
      >
        <PTButton
          className="btn btn-success btn-inverse btn-create"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-plus"
          />
          <span
            className="btn-text"
          >
             Create
          </span>
        </PTButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PromsMainPanel /> should renders with all props correctly 4`] = `
<div
  className="panel-body"
>
  <PromsChart
    onCellClick={[Function]}
  />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent left"
      >
        <PaginationBlock
          entriesPerPage={1}
          offset={0}
          setOffset={[Function]}
          totalEntriesAmount={116}
        />
      </div>
      <div
        className="control-group with-indent right"
      >
        <PTButton
          className="btn btn-success btn-inverse btn-create"
          onClick={[Function]}
        >
          <i
            className="btn-icon fa fa-plus"
          />
          <span
            className="btn-text"
          >
             Create
          </span>
        </PTButton>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <PromsMainPanel /> should renders with all props correctly 5`] = `
<div
  className="panel-body"
>
  <PromsChart
    onCellClick={[Function]}
  />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent left"
      >
        <PaginationBlock
          entriesPerPage={1}
          offset={0}
          setOffset={[Function]}
          totalEntriesAmount={116}
        />
      </div>
      <div
        className="control-group with-indent right"
      />
    </div>
  </div>
</div>
`;

exports[`Component <PromsMainPanel /> should renders with all props correctly 6`] = `
<div
  className="panel-body"
>
  <PromsChart
    onCellClick={[Function]}
  />
  <div
    className="panel-control"
  >
    <div
      className="wrap-control-group"
    >
      <div
        className="control-group with-indent left"
      >
        <PaginationBlock
          entriesPerPage={1}
          offset={0}
          setOffset={[Function]}
          totalEntriesAmount={116}
        />
      </div>
      <div
        className="control-group with-indent right"
      />
    </div>
  </div>
</div>
`;
